fix nav bar on mobiles / add quote and prinicgs

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 	--main-color: rgb(15 116 143 / 70%);
 	--secondary-color: #777;
 	--overlay: rgb(0, 0, 0, 60%);
+	--sky: #18c9fa;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
 header {
 	position: absolute;
 	width: 100%;
-	z-index: 10;
+	z-index: 2;
 }
 
 header .container {
@@ -100,10 +101,6 @@ header nav .search {
 }
 
 @media (max-width: 767px) {
-	header {
-		width: 100%;
-	}
-
 	header .container::after {
 		left: 0;
 	}
@@ -111,15 +108,11 @@ header nav .search {
 	header nav ul {
 		position: absolute;
 		background-color: var(--overlay);
-		left: 100%;
-		top: 100%;
+		left: 0;
+		top: -1000px;
 		width: 100%;
 		flex-direction: column;
 		transition: 0.3s;
-	}
-
-	header nav .nav-btn:hover {
-		top: 100%;
 	}
 
 	header nav ul li {
@@ -207,8 +200,8 @@ header nav .search {
 }
 
 .landing .bullets .bullet.active {
-	background-color: #18c9fa;
-	border-color: #18c9fa;
+	background-color: var(--sky);
+	border-color: var(--sky);
 }
 
 @media (max-width: 767px) {
@@ -223,7 +216,7 @@ section {
 }
 
 section .top {
-	padding-bottom: 100px;
+	padding: 0 20px 100px 20px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -287,7 +280,7 @@ section .top p {
 }
 
 #services .services .service .content h3 {
-	color: #18c9fa;
+	color: var(--sky);
 }
 
 #services .services .service .content p {
@@ -377,7 +370,7 @@ section .top p {
 }
 
 #portfolio .filters li.active {
-	background-color: #18c9fa;
+	background-color: var(--sky);
 	color: white;
 }
 
@@ -433,11 +426,11 @@ section .top p {
 }
 
 #portfolio .gallery .image .content p {
-	color: #18c9fa;
+	color: var(--sky);
 }
 
 #portfolio .more {
-	background-color: #18c9fa;
+	background-color: var(--sky);
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
@@ -628,6 +621,17 @@ section .top p {
 	font-size: 14px;
 }
 
+@media (max-width: 767px) {
+	#our-skills .testimonial {
+		flex-direction: column;
+	}
+
+	#our-skills .testimonial .comment {
+		padding-bottom: 10px;
+		text-align: center;
+	}
+}
+
 .testimonials {
 	position: relative;
 }
@@ -649,8 +653,8 @@ section .top p {
 }
 
 .testimonials .bullets .bullet.active {
-	background-color: #18c9fa;
-	border-color: #18c9fa;
+	background-color: var(--sky);
+	border-color: var(--sky);
 }
 
 .bottom .skills {
@@ -684,7 +688,7 @@ section .top p {
 	top: 0;
 	left: 0;
 	height: 100%;
-	background-color: #18c9fa;
+	background-color: var(--sky);
 }
 
 .bottom .skills .skill .prog span::before {
@@ -718,4 +722,131 @@ section .top p {
 	#our-skills .container {
 		flex-direction: column;
 	}
+}
+
+#quote {
+	background-image: url('../images/quote.jpg');
+	background-size: cover;
+	position: relative;
+	text-align: center;
+	color: white;
+}
+
+#quote::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--overlay);
+}
+
+#quote .container {
+	position: relative;
+}
+
+#quote q {
+	font-size: 1.5rem;
+	margin-bottom: 20px;
+	display: block;
+}
+
+#quote q::before {
+	content: '\f10d';
+	font-family: 'Font Awesome 6 Free';
+	font-weight: 600;
+	margin-right: 10px;
+}
+
+#quote q::after {
+	content: '\f10e';
+	font-family: 'Font Awesome 6 Free';
+	font-weight: 600;
+	margin-left: 10px;
+}
+
+#pricing .bottom {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	gap: 30px;
+}
+
+#pricing .pricing {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
+
+#pricing .pricing .head {
+	padding: 30px;
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+	border-top: 1px solid var(--sky);
+	border-bottom: 1px solid var(--sky);
+	align-items: center;
+}
+
+#pricing .pricing .head h3 {
+	font-weight: normal;
+}
+
+#pricing .pricing .head span {
+	font-size: 3rem;
+	font-weight: bold;
+	position: relative;
+}
+
+#pricing .pricing .head span::before {
+	content: '$';
+	position: absolute;
+	top: 0;
+	left: -20px;
+	font-size: 1rem;
+}
+
+#pricing .pricing .head span::after {
+	content: '/Mo';
+	position: absolute;
+	bottom: 5px;
+	right: -40px;
+	font-size: 1rem;
+}
+
+#pricing .pricing ul {
+	padding: 20px;
+	border-bottom: 1px solid var(--sky);
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	align-items: center;
+}
+
+#pricing .pricing ul li:not(:last-child) {
+	padding: 10px 0;
+	border-bottom: 1px solid var(--sky);
+}
+
+#pricing .pricing button {
+	margin: 30px auto;
+	width: fit-content;
+	padding: 10px 20px;
+	border: 1px solid var(--sky);
+}
+
+#pricing .contact-text {
+	margin-top: 50px;
+	margin-bottom: 20px;
+	font-weight: normal;
+	text-align: center;
+}
+
+#pricing .contact-link {
+	display: block;
+	width: fit-content;
+	color: white;
+	padding: 20px 30px;
+	margin: 0 auto;
+	background-color: var(--sky);
 }
